/*******************************************************************************
 * This file is part of OpenNMS(R).
 *
 * Copyright (C) 2023 The OpenNMS Group, Inc.
 * OpenNMS(R) is Copyright (C) 1999-2023 The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published
 * by the Free Software Foundation, either version 3 of the License,
 * or (at your option) any later version.
 *
 * OpenNMS(R) is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with OpenNMS(R).  If not, see:
 *      http://www.gnu.org/licenses/
 *
 * For more information contact:
 *     OpenNMS(R) Licensing <license@opennms.org>
 *     http://www.opennms.org/
 *     http://www.opennms.com/
 *******************************************************************************/
syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package opennms.alerts;
option java_multiple_files = true;
option java_package = "org.opennms.horizon.alerts.proto";

//Common enums

enum ManagedObjectType {
  UNDEFINED = 0;
  ANY = 1;
  NODE = 2;
  SNMP_INTERFACE = 3;
  SNMP_INTERFACE_LINK = 4;
}

enum Severity {
  // No or missing value
  SEVERITY_UNDEFINED = 0;
  // The Indeterminate severity level indicates that the severity level cannot be determined.
  INDETERMINATE = 1;
  // The Cleared severity level indicates the clearing of one or more previously reported alerts. This
  // alert clears all alerts for this managed object that have the same Alert type, Probable cause and
  // Specific problems (if given).
  CLEARED = 2;
  // Informational only.
  NORMAL = 3;
  // The Warning severity level indicates the detection of a potential or impending service affecting
  // fault, before any significant effects have been felt. Action should be taken to further diagnose (if
  // necessary) and correct the problem in order to prevent it from becoming a more serious service affecting
  // fault.
  WARNING = 4;
  // The Minor severity level indicates the existence of a non-service affecting fault condition and that
  // corrective action should be taken in order to prevent a more serious (for example, service affecting) fault.
  // Such a severity can be reported, for example, when the detected alert condition is not currently
  // degrading the capacity of the managed object.
  MINOR = 5;
  // The Major severity level indicates that a service affecting condition has developed and an urgent
  // corrective action is required. Such a severity can be reported, for example, when there is a severe
  // degradation in the capability of the managed object and its full capability must be restored.
  MAJOR = 6;
  // The Critical severity level indicates that a service affecting condition has occurred and an
  // immediate corrective action is required. Such a severity can be reported, for example, when a managed
  // object becomes totally out of service and its capability must be restored.
  CRITICAL = 7;
}

enum AlertType {
  ALARM_TYPE_UNDEFINED = 0;
  PROBLEM_WITH_CLEAR = 1;
  CLEAR = 2;
  PROBLEM_WITHOUT_CLEAR = 3;
}

message TimeRangeFilter {
  google.protobuf.Timestamp start_time = 1;
  google.protobuf.Timestamp end_time = 2;
}

message Filter {
  oneof filter {
    TimeRangeFilter time_range = 1;
    Severity severity = 2;
    int64 node_id = 3;
    string node_label = 4;
  }
}

message Alert {
  string tenant_id = 1;
  uint64 database_id = 2;
  string uei = 3;
  string reduction_key = 4;
  string clear_key = 5;

  AlertType type = 6;
  uint64 counter = 7;
  Severity severity = 8;
  // Summary
  string description = 9;
  // Details
  string log_message = 10;

  string location = 11;
  // What object (physical or virtual) does this relate to?
  ManagedObject managed_object = 12;

  uint64 first_event_time_ms = 13;
  uint64 last_event_id = 14;
  uint64 last_update_time_ms = 15;

  bool is_acknowledged = 16;
  // Acknowledged by who?
  string ack_user = 17;
  // Acknowledged when?
  uint64 ack_time_ms = 18;
  repeated uint64 monitoring_policy_id = 19;
  string node_name = 20;
  string label = 21;
  repeated string rule_name = 22;
  repeated string policy_name = 23;
  uint64 node_id=24;
}

message EventMatch {
  string name = 1;
  string value = 2;
}

message ManagedObject {
  ManagedObjectType type = 1;
  ManagedObjectInstance instance = 2;
}

message NodeRef {
  uint64 node_id = 1;
}

message SnmpInterfaceRef {
  NodeRef node = 1;
  uint64 if_index = 2;
}

message SnmpInterfaceLinkRef {
  SnmpInterfaceRef if_a = 1;
  SnmpInterfaceRef if_b = 2;
}

message ManagedObjectInstance {
  oneof value {
    NodeRef node_val = 1;
    SnmpInterfaceRef snmp_interface_val = 2;
    SnmpInterfaceLinkRef snmp_interface_link_val = 3;

    google.protobuf.Any any_val = 9; // protobuf.Any encoded bytes.
  }
}

message ListAlertsRequest {
  // Optional. The maximum number of alerts to return in the response.
  int32 page_size = 1;
  int32 page = 3;
  repeated Filter filters = 4;
  string sort_by = 5;
  bool sort_ascending = 6;
}

message ListAlertsResponse {
  // A possibly paginated list of Alerts that are associated with the calling tenant.
  repeated Alert alerts = 1;

  // A pagination token returned from a previous call to `ListAlerts`
  // that indicates from where listing should continue.
  int32 next_page = 2;
  int32 last_page = 3;
  int64 total_alerts = 4;
  AlertError error = 5;
}

message CountAlertResponse {
  int32 count = 1;
  AlertError error = 2;
}

message AlertCount {
  map<string, int64> count_by_severity = 1;
  int64 total_alert_count = 2;
  int64 acknowledged_count = 3;
}

message AlertRequest {
  repeated uint64 alert_id = 1;
}

message AlertResponse {
  repeated Alert alert = 1;
  repeated AlertError alert_error = 2;
}

message DeleteAlertResponse {
  repeated uint64 alert_id = 1;
  repeated AlertError alert_error = 2;
}

message AlertError {
  uint64 alert_id = 1;
  string error = 2;
}

message AlertRequestByNode {
  int64 node_id = 1;
  int32 page_size = 2;
  int32 page = 3;
  string sort_by = 5;
  bool sort_ascending = 6;
}
service AlertService {
  rpc listAlerts(ListAlertsRequest) returns (ListAlertsResponse) {};
  rpc acknowledgeAlert(AlertRequest) returns (AlertResponse) {};
  rpc unacknowledgeAlert(AlertRequest) returns (AlertResponse) {};
  rpc clearAlert(AlertRequest) returns (AlertResponse) {};
  rpc escalateAlert(AlertRequest) returns (AlertResponse) {};
  rpc deleteAlert(AlertRequest) returns(DeleteAlertResponse) {};
  rpc countAlerts(ListAlertsRequest) returns (CountAlertResponse) {};
  rpc alertCounts(google.protobuf.Empty) returns (AlertCount) {};
  rpc getAlertsByNode(AlertRequestByNode)  returns (ListAlertsResponse) {};
  rpc countNodesByMonitoringPolicy(google.protobuf.Int64Value) returns(google.protobuf.Int64Value);
  rpc getAlertsByNodeId(google.protobuf.Int64Value) returns (ListAlertsResponse);
}

// Proto for Monitoring policy

message MonitorPolicyProto {
  int64 id = 1;
  string tenantId = 2;
  string name = 3;
  string memo = 4;
  repeated PolicyRuleProto rules = 5;
  repeated string tags = 6;
  bool notifyByEmail = 7;
  bool notifyByPagerDuty = 8;
  bool notifyByWebhooks = 9;
  string notifyInstruction = 10;
  bool enabled = 11;
}

message PolicyRuleProto {
  int64 id = 1;
  string tenantId = 2;
  string name = 3;
  ManagedObjectType componentType = 4;
  repeated AlertConditionProto snmpEvents = 5;
  DetectionMethod detectionMethod = 6;
  EventType eventType = 7;
  string thresholdMetricName = 8;
}

enum DetectionMethod {
  EVENT = 0;
  THRESHOLD = 1;
}

message AlertConditionProto {
  int64 id = 1;
  string tenantId = 2;
  AlertEventDefinitionProto triggerEvent = 3;
  int32 count = 4;
  int32 overtime = 5;
  OverTimeUnit overtimeUnit = 6;
  Severity severity = 7;
  AlertEventDefinitionProto clearEvent = 8;
  ThresholdMetricProto thresholdMetric = 9;
}

message ThresholdMetricProto {
  int64 id = 1;
  string name = 2;
  bool enabled = 3;
  float threshold = 4;
  string condition = 5;
  string expression = 6;
}

enum OverTimeUnit {
  UNKNOWN_UNIT = 0;
  SECOND = 1;
  MINUTE = 2;
  HOUR = 3;
}

message MonitorPolicyList {
  repeated MonitorPolicyProto policies = 1;
}

service MonitorPolicyService {
  rpc createPolicy(MonitorPolicyProto) returns(MonitorPolicyProto);
  rpc listPolicies(google.protobuf.Empty) returns(MonitorPolicyList);
  rpc getPolicyById(google.protobuf.Int64Value) returns(MonitorPolicyProto);
  rpc getDefaultPolicy(google.protobuf.Empty) returns(MonitorPolicyProto);
  rpc deletePolicyById(google.protobuf.Int64Value) returns(google.protobuf.BoolValue);
  rpc deleteRuleById(google.protobuf.Int64Value) returns(google.protobuf.BoolValue);
  rpc countAlertByPolicyId(google.protobuf.Int64Value) returns(google.protobuf.Int64Value);
  rpc countAlertByRuleId(google.protobuf.Int64Value) returns(google.protobuf.Int64Value);
  rpc searchMonitorPolicies(MonitorPolicySearchBy) returns (MonitorPolicyList);
}

message AlertEventDefinitionProto {
  int64 id = 1;
  string uei = 2;
  string name = 3;
  string reductionKey = 4;
  string clearKey = 5;
  EventType eventType = 6;
  string vendor = 7;
  string enterpriseId = 8;
}

enum EventType {
  INTERNAL = 0;
  SNMP_TRAP = 1;
  SYSLOG = 2;
  METRIC_THRESHOLD = 3;
}

message ListAlertEventDefinitionsRequest {
  EventType eventType = 1;
}

message ListAlertEventDefinitionsResponse {
  repeated AlertEventDefinitionProto alertEventDefinitions = 1;
}

message VendorList {
  repeated string  vendor = 1;
}

message EventDefinitionsByVendor {
  string  vendor = 1;
  repeated AlertEventDefinitionProto eventDefinition = 2;
}

message EventDefsByVendorRequest {
  EventType eventType = 1;
  string  vendor = 2;
}

message ListEventDefinitionsByVendor {
  repeated  EventDefinitionsByVendor eventDefinitionByVendor = 1;
}
message MonitorPolicySearchBy {
  string searchTerm = 1;
  int32 page_size = 2;
  int32 page = 3;
  string sort_by = 4;
  bool sort_ascending = 5;

}

service AlertEventDefinitionService {
  rpc listAlertEventDefinitions(ListAlertEventDefinitionsRequest) returns(ListAlertEventDefinitionsResponse);
  rpc listVendors(google.protobuf.Empty) returns (VendorList);
  rpc listAlertEventDefinitionsByVendor(EventDefsByVendorRequest) returns(EventDefinitionsByVendor);
}
